added to what was already there for part 1

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
   unlock(from);
 }</code></pre>
 				<p>Alright, now it looks like we're in better shape, but unfortunately we still have some problems. We're holding two locks at the same time. What happens when we've got a lock on account A and we are about to lock account B as well, but another thread has already locked B and is waiting for A? This situation is called <i>deadlock</i>. Following the goldilocks principle has the potential to create deadlock like this.</p>
+				<br>
+				<p>This also creates an efficiency problem, because if we need to examine more parts of the code, we'll have to individually lock every single part we want to look at! This creates extremely inefficient code, because while we have the lock, none of the other threads can get any work done. This type of lock is called a <i>spinlock</1>. In a spin lock, a thread will try to acquire a lock, and if the lock is already taken by some other thread, it will keep spinning (waiting) and chew up CPU time until it can grab the lock.  
+				
+				<h4>Critical Section Implementation</h4>
+				<h5>On a single processor</h5>
+				<h5>On multiple processors</h5>
+
 			</div>
 		</div>
 	</div>
