--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
   unlock(from);
 }</code></pre>
 				<p>Alright, now it looks like we're in better shape, but unfortunately we still have some problems. We're holding two locks at the same time. What happens when we've got a lock on account A and we are about to lock account B as well, but another thread has already locked B and is waiting for A? This situation is called <i>deadlock</i>. Following the goldilocks principle has the potential to create deadlock like this.</p>
-				<p>This also creates an efficiency problem, because if we need to examine more parts of the code, we'll have to individually lock every single part we want to look at! This creates extremely inefficient code, because while we have the lock, none of the other threads can get any work done. This type of lock is called a <i>spinlock</i>. In a spin lock, a thread will try to acquire a lock, and if the lock is already taken by some other thread, it will keep spinning (waiting) and chew up CPU time until it can grab the lock.</p>  
 				
 				<h4>Critical Section Implementation</h4>
 					<h5>On a single processor</h5>
@@ -58,7 +57,14 @@
 							<li>Cooperative multitasking - we execute no instructions when entering or exiting the criical section and ensure that the CPU is not given up in the middle of a critical section. 
 						</ol> 
 					<h5>On multiple processors</h5>
-
+						<p>With multiple processors, races between threads become more prevalent since multiple cores are executing code at the same time. Consider an implementation of pipes from scratch, without using the linux system call:</p>
+						</pre><code>struct pipe {
+						char buf[1024] //arbitrary length
+						unsigned r, w; //read and write pointers that indicate where in the buffer we should read or write from
+						} </code></pre>
+						<p>Assume that the buffer is circular, so that when a read or write pointer hits the end of the buffer it continues from the beginning. However, this code is not entirely correct, because we can't tell an empty pipe from a full one. So, instead of accessing r and w directly as indexes into the buffer (where their values would range from 0 to 1023), we make their values between 0 and UINT_MAX. Then if a pointer r or w % 1024 is 0, the pipe is empty, and if it is 1 (or higher), the pipe is full. The following code will tell us how many spots are in the buffer:</p>
+						<pre><code>(w - r) % 2014)) </pre></code> 
+						<h6>NOTE TO SELF: USE DIAGRAMS TO EXPLAIN WHATS GOING ON WITH THE BUFFER AND POINTERS HERE. CHECK 38:00 and 39:23 REMAINING IN THE VIDEO</h6>	
 			</div>
 		</div>
 	</div>
