--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   from->balance -= amount;
   to->balance += amount;
 }</code></pre>
-				<p>Can you see the problem here? It should be obvious to you; if we are transferring money to account A at the same time as someone else, we will run into trouble. A quick solution to this problem would be to wrap the actions on the accounts in locks so that only one thread can change be changing an account's balance at a time:</p>
+				<p>Can you see the problem here? It should be obvious to you; if we are transferring money to account A at the same time as someone else, we will run into trouble. A quick solution to this problem would be to wrap the actions on the accounts in locks so that only one thread can be changing an account's balance at a time:</p>
 				<pre><code>void transfer(account* from, account* to, int amount) {
   lock(from);
     from->balance -= amount;
@@ -118,6 +118,12 @@ void lock (lock_t *l) {
 	*l = 1;
 	return; 
 }</code></pre>
+							<p></p>
+							<pre><code>//precondition: we have the lock
+//postcondition: we don't have the lock
+void unlock (lock_t *l) {
+	*l = 0; 
+}
 							<p>But we now have to worry about races, because this is just ordinary code that any thread can execute in user mode. There's a race condition right after the while ends, because some other thread might come out of the loop at the same exact time we do, both will grab the lock and set l to 1, and later down the road we'll get a deadlock. We get out of this by asking the hardware people to help us out.</p>    
 							<p>PROS: Harder, because of race conditions described above.</p>
 							<p>CONS: Faster than using an ordinary system call.</p>
