--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/skeleton.css">
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<div class="container">
@@ -63,7 +64,7 @@
 } </code></pre>
 						<p>Assume that the buffer is circular, so that when a read or write pointer hits the end of the buffer it continues from the beginning. However, this code is not entirely correct, because we can't tell an empty pipe from a full one. So, instead of accessing r and w directly as indexes into the buffer (where their values would range from 0 to 1023), we make their values between 0 and UINT_MAX. Then if a pointer r or w % 1024 is 0, the pipe is empty, and if it is 1 (or higher), the pipe is full. The following code will tell us how many spots are in the buffer:</p>
 						<pre><code>(w - r) % 2014</pre></code>
-						<h6>NOTE TO SELF: USE DIAGRAMS TO EXPLAIN WHATS GOING ON WITH THE BUFFER AND POINTERS HERE. CHECK 38:00 and 39:23 REMAINING IN THE VIDEO</h6>
+						<div id="pipeEnds"></div>
 						<p>Now, we have to create primitives that can access the pipe. To keep it simple, we force reads and writes to be 1 byte at a time. </p>
 						<pre><code>bool write_pipe(struct pipe *p, char c) {
   if (p->w - p->r == 1024) //check to make sure the pipe isn't full.
